# vk-messages

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: VkWind.glade  apps.vk-messages.gschema.xml  vk-messages.desktop
debian/: changelog  control  copyright  install  rules
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
src/: Auth.cpp  Auth.h  Curl.cpp  Curl.h  Globals.h  Indicator.cpp  Indicator.h  Makefile  Makefile.am  Makefile.in  Settings.cpp  Settings.h  Vk.cpp  Vk.h  Window.cpp  Window.h  config.h  main.cpp
src/.deps/: Auth.Po  Curl.Po  Indicator.Po  Settings.Po  Vk.Po  Window.Po  main.Po
